--- a/ado-signing-pipeline.yml
+++ b/ado-signing-pipeline.yml
@@ -74,7 +74,7 @@ steps:
     }
 
     $importedModules = Get-Module
-    Write-Host "Imported modules: `n $importedModules"
+    Write-Host "Imported modules: `n ($importedModules.Path | Out-String)"
 
     $missingModules = $moduleFiles | Where-object {$_ -inotin ($importedModules).Path} 
     If ($missingModules) {
@@ -122,7 +122,7 @@ steps:
     }
 
     # output whether modules were changed
-        Write-Output ("##vso[task.setvariable variable=filesZipped;isOutput=true]$($moduleManifestFilesObjs.count -gt 0)")
+    Write-Output ("##vso[task.setvariable variable=filesZipped;isOutput=true]$($moduleManifestFilesObjs.count -gt 0)")
   displayName: 'Zip signed modules'
   name: 'ZipFiles'
   enabled: false
@@ -152,7 +152,7 @@ steps:
     }
 
     # output whether modules were changed
-        Write-Output ("##vso[task.setvariable variable=filesZipped;isOutput=true]$($true)")
+    Write-Output ("##vso[task.setvariable variable=filesZipped;isOutput=true]$($true)")
   displayName: 'Zip signed modules'
   name: 'ZipAllFiles'
   enabled: true
