ipmo test name, ignore CodeSignSummary

--- a/ado-signing-pipeline.yml
+++ b/ado-signing-pipeline.yml
@@ -74,7 +74,7 @@ steps:
     }
 
     $importedModules = Get-Module
-    Write-Host "Imported modules: `n ($importedModules.Path | Out-String)"
+    Write-Host "Imported modules: `n $($importedModules.Path | Out-String)"
 
     $missingModules = $moduleFiles | Where-object {$_ -inotin ($importedModules).Path} 
     If ($missingModules) {
