Refactor Setup to PowerShell Modules (#208)
* init empty modules

* reorg new modules

* wip: confirmation modules

* module imports

* module imports

* module imports

* wip: setup examples

* wip: transfer from setup

* move to $config.$1

* wip: setup conversion (dep core rscs)

* wip: setup conversion (dep core rscs)

* wip: core deployment

* core resource deployed

* core resource deployed

* lighthouse cleanup

* cleanup fixes

* wip: validaion, update

* lighthouse removal cleanup

* removal functions testing

* update functionality

* comment help

* save config

* saved config, ouptut message

* move to config[runtime]

* correcting runtime config obj

* manual removal params

* publishing

* fix paramset selection

* add modularized bicep

* setup support for  modularized bicep

* setup support for  modularized bicep

* eula messages

* message tweak

* -yes parameter

* comment details

* add updating modules.json to update runbooks

* fix: runbook update output; prompt clarity

* rg tags update; erroractionpreference

* remove component clarity

* -newComponents should not include lighthouse by default

--- a/ado-signing-pipeline.yml
+++ b/ado-signing-pipeline.yml
@@ -211,7 +211,7 @@ steps:
 
       try {
           $ErrorActionPreference = 'Stop'
-          ./setup.ps1 -configFilePath $configFilePath -configureLighthouseAccessDelegation -alternatePSModulesURL $alternatePSModulesURL -Verbose
+          ./setup.ps1 -configFilePath $configFilePath -configureLighthouseAccessDelegation -alternatePSModulesURL $alternatePSModulesURL -Yes -Verbose
       }
       catch {
           throw "Failed test deploy of solution with error: $_"
