--- a/setup/config.json
+++ b/setup/config.json
@@ -1,18 +1,18 @@
 {
   "keyVaultName": "guardrails",
-  "resourcegroup": "Guardrails",
+  "resourceGroup": "Guardrails",
   "region": "CanadaCentral",
-  "storageaccountName": "guardrails",
+  "storageAccountName": "guardrails",
   "logAnalyticsworkspaceName": "guardrails",
-  "autoMationAccountName": "guardrails",
-  "FirstBreakGlassAccountUPN": "user1@domain.com",
-  "SecondBreakGlassAccountUPN": "user2@domain.com",
-  "PBMMPolicyID": "4c4a5f27-de81-430b-b4e5-9cbd50595a87",
-  "AllowedLocationPolicyId": "e56962a6-4747-49cd-b67b-bf8b01975c4c",
-  "DepartmentNumber": "",
-  "CBSSubscriptionName": "N/A",
-  "SecurityLAWResourceId": "",
-  "HealthLAWResourceId": "",
+  "automationAccountName": "guardrails",
+  "firstBreakGlassAccountUPN": "user1@domain.com",
+  "secondBreakGlassAccountUPN": "user2@domain.com",
+  "pbmmPolicyID": "4c4a5f27-de81-430b-b4e5-9cbd50595a87",
+  "allowedLocationPolicyId": "e56962a6-4747-49cd-b67b-bf8b01975c4c",
+  "departmentNumber": "",
+  "cbsSubscriptionName": "N/A",
+  "securityLAWResourceId": "",
+  "healthLAWResourceId": "",
   "Locale": "en-CA",
   "lighthouseServiceProviderTenantID": "",
   "lighthousePrincipalDisplayName": "",
