--- a/ado-signing-pipeline.yml
+++ b/ado-signing-pipeline.yml
@@ -268,97 +268,19 @@ steps:
     azurePowerShellVersion: 'LatestVersion'
     pwsh: true
     Inline: |
-      If (get-azresource -ResourceId '/subscriptions/$(testSubscriptionId)/resourceGroups/Guardrails-5c060f8e/providers/Microsoft.OperationalInsights/workspaces/guardrails-5c060f8e' -ErrorAction SilentlyContinue) {
-        Write-Verbose "Force deleting Log Analytics Workspace..."
-        get-azresource -ResourceId '/subscriptions/$(testSubscriptionId)/resourceGroups/Guardrails-5c060f8e/providers/Microsoft.OperationalInsights/workspaces/guardrails-5c060f8e' | 
-          get-AzOperationalInsightsWorkspace  | 
-          Remove-AzOperationalInsightsWorkspace -Force -ForceDelete
-      } 
+      If (-NOT($env:SKIPCLEANUP)) {
+        ipmo ./src/GuardrailsSolutionAcceleratorSetup
 
-      If (Get-AzResourcegroup -Id '/subscriptions/$(testSubscriptionId)/resourceGroups/Guardrails-5c060f8e' -ErrorAction SilentlyContinue) {
-        Write-Verbose "Deleteting resource group (async)..."
-        Remove-AzResourceGroup -Id '/subscriptions/$(testSubscriptionId)/resourceGroups/Guardrails-5c060f8e' -force -AsJob | Out-Null # don't wait for delete to complete
-      }
+        $c = Get-GSAExportedConfig -KeyVaultName guardrails-5c060f8e -y
+        $config = $c.configString | ConvertFrom-Json
 
-      #remove lighthouse assignments
-      Write-Verbose "Checking for Lighthouse assignments..."
-      $uri = 'https://management.azure.com/subscriptions/{0}/providers/Microsoft.ManagedServices/registrationAssignments?api-version=2022-01-01-preview' -f '$(testSubscriptionId)'
-      $assignments = Invoke-AzRestMethod -Method GET -Uri $uri -Verbose
-      $assignmentValue = $assignments.Content | ConvertFrom-Json
-
-      ForEach ($assignment in $assignmentValue) {
-          If ($assignment.Value.name) {
-            Write-Verbose "Deleteing lighthouse assignment '$($assignment.name)'"
-            $uri = 'https://management.azure.com/subscriptions/{0}/providers/Microsoft.ManagedServices/registrationAssignments/{1}?api-version=2022-01-01-preview' -f '$(testSubscriptionId)',$assignment.value.Name
-
-            Invoke-AzRestMethod -Method DELETE -Uri $uri -Verbose
-          }
-      }
-
-      #remove lighthouse definitions
-      Write-Verbose "Checking for lighthouse registration definitions..."
-      $uri = 'https://management.azure.com/subscriptions/{0}/providers/Microsoft.ManagedServices/registrationdefinitions?api-version=2022-01-01-preview' -f '$(testSubscriptionId)'
-      $definitions = Invoke-AzRestMethod -Method GET -Uri $uri
-      $definitionsValue = $definitions.Content | ConvertFrom-Json
-
-      ForEach ($definition in $definitionsValue.value) {
-          if ($definition.name) {
-          Write-Verbose "Deleteing lighthouse registration definition '$($definition.Name)'"
-          $uri = 'https://management.azure.com/subscriptions/{0}/providers/Microsoft.ManagedServices/registrationdefinitions/{1}?api-version=2022-01-01-preview' -f '$(testSubscriptionId)',$definition.Name
-
-          Invoke-AzRestMethod -Method DELETE -Uri $uri -Verbose
-          }
-      }
-
-      $lighthouseTargetManagementGroupID = 'mb_co'
-      If ($lighthouseTargetManagementGroupID -eq (Get-AzContext).Tenant.Id) {
-          $assignmentScopeMgmtmGroupId = '/'
+        $c | remove-gsacentralizedReportingCustomerComponents -Force
+        $c | Remove-GSACentralizedDefenderCustomerComponents -Force
+        $c | Remove-GSACoreResources -Force
       }
       Else {
-          $assignmentScopeMgmtmGroupId = $lighthouseTargetManagementGroupID
+        Write-Host "Skipping cleanup because `$env:skipCleanup is true"
       }
-
-      # check if a lighthouse defender for cloud policy MSI role assignment already exists - assignment name always 2cb8e1b1-fcf1-439e-bab7-b1b8b008c294 
-      Write-Verbose "Checking for role assignments at management group '$assignmentScopeMgmtmGroupId' for role 'Owner'"
-      $uri = 'https://management.azure.com/providers/Microsoft.Management/managementGroups/{0}/providers/Microsoft.Authorization/roleAssignments/{1}?&api-version=2018-01-01-preview' -f $lighthouseTargetManagementGroupID,'2cb8e1b1-fcf1-439e-bab7-b1b8b008c294'
-      $roleAssignments = Invoke-AzRestMethod -Uri $uri -Method GET -Verbose | Select-Object -Expand Content | ConvertFrom-Json
-      If ($roleAssignments.id) {
-          Write-Verbose "Deleteing role assignments '$roleAssignments'"
-          $uri = 'https://management.azure.com/{0}?api-version=2015-07-01' -f $roleAssignments.id
-          Invoke-AzRestMethod -Uri $uri -Method DELETE -Verbose
-      }
-      Else {
-          Write-Verbose "No DfC role assignments found..."
-      }
-
-      
-      # check if a lighthouse Azure Automation MSI role assignment to register the Lighthouse resource provider already exists - assignment name always  5de3f84b-8866-4432-8811-24859ccf8146
-      Write-Verbose "Checking for role assignments at management group '$assignmentScopeMgmtmGroupId' for role 'Custom-RegisterLighthouseResourceProvider'"
-      $uri = 'https://management.azure.com/providers/Microsoft.Management/managementGroups/{0}/providers/Microsoft.Authorization/roleAssignments/{1}?&api-version=2018-01-01-preview' -f $lighthouseTargetManagementGroupID, '5de3f84b-8866-4432-8811-24859ccf8146'
-      $roleAssignments = Invoke-AzRestMethod -Uri $uri -Method GET | Select-Object -Expand Content | ConvertFrom-Json   
-      If ($roleAssignments.id) { 
-          Write-Verbose "Deleteing role assignments '$roleAssignments'"
-          $uri = 'https://management.azure.com/{0}?api-version=2015-07-01' -f $roleAssignments.id
-          Invoke-AzRestMethod -Uri $uri -Method DELETE -verbose
-      }
-      else {
-          Write-Verbose "No MSI role assignemnts found"
-      }
-
-      # check if lighthouse Custom-RegisterLighthouseResourceProvider exists at a different scope
-      Write-Verbose "Checking for existing role definitions with name 'Custom-RegisterLighthouseResourceProvider'"
-      $uri = "https://management.azure.com/providers/Microsoft.Management/managementGroups/{0}/providers/Microsoft.Authorization/roleDefinitions?`$filter=roleName eq '{1}'&api-version=2018-01-01-preview" -f $lighthouseTargetManagementGroupID,'Custom-RegisterLighthouseResourceProvider'
-      $response = Invoke-AzRestMethod -Uri $uri -Method Get
-
-      If ($response.StatusCode -eq '200') {
-          If ($roleDefId = ($response.Content | ConvertFrom-Json).Name) {
-          $uri = 'https://management.azure.com/providers/Microsoft.Management/managementGroups/{0}/providers/Microsoft.Authorization/roleDefinitions/{1}?api-version=2018-01-01-preview' -f $lighthouseTargetManagementGroupID,$roleDefId
-
-          Invoke-AzRestMethod -Method DELETE -Uri $uri
-          }
-      }
-
-
   name: 'CleanUpTest'
 
 
