--- a/ado-signing-pipeline.yml
+++ b/ado-signing-pipeline.yml
@@ -12,7 +12,7 @@ pool:
   vmImage: windows-latest
 
 variables: 
-  group: 'GuardrailsTestDeployments'
+  - group: 'GuardrailsTestDeployments'
 
 steps:
 
@@ -170,7 +170,7 @@ steps:
 
 - task: AzurePowerShell@5
   inputs:
-    azureSubscription: 'Matthew Virtual Studio (mb_co)'
+    azureSubscription: 'Matthew Visual Studio (mb_co)'
     ScriptType: 'InlineScript'
     FailOnStandardError: true
     azurePowerShellVersion: 'LatestVersion'
@@ -218,109 +218,69 @@ steps:
       }
       finally {
         If (!$?) {throw "Failed test deploy of solution with error: $($error[0]) $_"}
+        Pop-Location
       }
   name: 'TestSolutionDeploy'
 
 - task: AzurePowerShell@5
-  condition: always()
+  name: 'CheckForJobErrors'
+  displayName: 'Check for AA Job Errors'
   inputs:
-    azureSubscription: 'Matthew Virtual Studio (mb_co)'
+    azureSubscription: 'Matthew Visual Studio (mb_co)'
     ScriptType: 'InlineScript'
     FailOnStandardError: true
     azurePowerShellVersion: 'LatestVersion'
     pwsh: true
     Inline: |
-      If (get-azresource -ResourceId '/subscriptions/$(testSubscriptionId)/resourceGroups/Guardrails-5c060f8e/providers/Microsoft.OperationalInsights/workspaces/guardrails-5c060f8e' -ErrorAction SilentlyContinue) {
-        Write-Verbose "Force deleting Log Analytics Workspace..."
-        get-azresource -ResourceId '/subscriptions/$(testSubscriptionId)/resourceGroups/Guardrails-5c060f8e/providers/Microsoft.OperationalInsights/workspaces/guardrails-5c060f8e' | 
-          get-AzOperationalInsightsWorkspace  | 
-          Remove-AzOperationalInsightsWorkspace -Force -ForceDelete
-      } 
+      ipmo ./src/GuardrailsSolutionAcceleratorSetup
 
-      If (Get-AzResourcegroup -Id '/subscriptions/$(testSubscriptionId)/resourceGroups/Guardrails-5c060f8e' -ErrorAction SilentlyContinue) {
-        Write-Verbose "Deleteting resource group (async)..."
-        Remove-AzResourceGroup -Id '/subscriptions/$(testSubscriptionId)/resourceGroups/Guardrails-5c060f8e' -force -AsJob | Out-Null # don't wait for delete to complete
-      }
-
-      #remove lighthouse assignments
-      Write-Verbose "Checking for Lighthouse assignments..."
-      $uri = 'https://management.azure.com/subscriptions/{0}/providers/Microsoft.ManagedServices/registrationAssignments?api-version=2022-01-01-preview' -f '$(testSubscriptionId)'
-      $assignments = Invoke-AzRestMethod -Method GET -Uri $uri -Verbose
-      $assignmentValue = $assignments.Content | ConvertFrom-Json
-
-      ForEach ($assignment in $assignmentValue) {
-          If ($assignment.Value.name) {
-            Write-Verbose "Deleteing lighthouse assignment '$($assignment.name)'"
-            $uri = 'https://management.azure.com/subscriptions/{0}/providers/Microsoft.ManagedServices/registrationAssignments/{1}?api-version=2022-01-01-preview' -f '$(testSubscriptionId)',$assignment.value.Name
-
-            Invoke-AzRestMethod -Method DELETE -Uri $uri -Verbose
-          }
-      }
-
-      #remove lighthouse definitions
-      Write-Verbose "Checking for lighthouse registration definitions..."
-      $uri = 'https://management.azure.com/subscriptions/{0}/providers/Microsoft.ManagedServices/registrationdefinitions?api-version=2022-01-01-preview' -f '$(testSubscriptionId)'
-      $definitions = Invoke-AzRestMethod -Method GET -Uri $uri
-      $definitionsValue = $definitions.Content | ConvertFrom-Json
-
-      ForEach ($definition in $definitionsValue.value) {
-          if ($definition.name) {
-          Write-Verbose "Deleteing lighthouse registration definition '$($definition.Name)'"
-          $uri = 'https://management.azure.com/subscriptions/{0}/providers/Microsoft.ManagedServices/registrationdefinitions/{1}?api-version=2022-01-01-preview' -f '$(testSubscriptionId)',$definition.Name
-
-          Invoke-AzRestMethod -Method DELETE -Uri $uri -Verbose
-          }
-      }
-
-      $lighthouseTargetManagementGroupID = 'mb_co'
-      If ($lighthouseTargetManagementGroupID -eq (Get-AzContext).Tenant.Id) {
-          $assignmentScopeMgmtmGroupId = '/'
-      }
-      Else {
-          $assignmentScopeMgmtmGroupId = $lighthouseTargetManagementGroupID
-      }
-
-      # check if a lighthouse defender for cloud policy MSI role assignment already exists - assignment name always 2cb8e1b1-fcf1-439e-bab7-b1b8b008c294 
-      Write-Verbose "Checking for role assignments at management group '$assignmentScopeMgmtmGroupId' for role 'Owner'"
-      $uri = 'https://management.azure.com/providers/Microsoft.Management/managementGroups/{0}/providers/Microsoft.Authorization/roleAssignments/{1}?&api-version=2018-01-01-preview' -f $lighthouseTargetManagementGroupID,'2cb8e1b1-fcf1-439e-bab7-b1b8b008c294'
-      $roleAssignments = Invoke-AzRestMethod -Uri $uri -Method GET -Verbose | Select-Object -Expand Content | ConvertFrom-Json
-      If ($roleAssignments.id) {
-          Write-Verbose "Deleteing role assignments '$roleAssignments'"
-          $uri = 'https://management.azure.com/{0}?api-version=2015-07-01' -f $roleAssignments.id
-          Invoke-AzRestMethod -Uri $uri -Method DELETE -Verbose
-      }
-      Else {
-          Write-Verbose "No DfC role assignments found..."
-      }
-
+      $c = Get-GSAExportedConfig -KeyVaultName guardrails-5c060f8e -y
+      $config = $c.configString | ConvertFrom-Json
       
-      # check if a lighthouse Azure Automation MSI role assignment to register the Lighthouse resource provider already exists - assignment name always  5de3f84b-8866-4432-8811-24859ccf8146
-      Write-Verbose "Checking for role assignments at management group '$assignmentScopeMgmtmGroupId' for role 'Custom-RegisterLighthouseResourceProvider'"
-      $uri = 'https://management.azure.com/providers/Microsoft.Management/managementGroups/{0}/providers/Microsoft.Authorization/roleAssignments/{1}?&api-version=2018-01-01-preview' -f $lighthouseTargetManagementGroupID, '5de3f84b-8866-4432-8811-24859ccf8146'
-      $roleAssignments = Invoke-AzRestMethod -Uri $uri -Method GET | Select-Object -Expand Content | ConvertFrom-Json   
-      If ($roleAssignments.id) { 
-          Write-Verbose "Deleteing role assignments '$roleAssignments'"
-          $uri = 'https://management.azure.com/{0}?api-version=2015-07-01' -f $roleAssignments.id
-          Invoke-AzRestMethod -Uri $uri -Method DELETE -verbose
+      $timeout = New-TimeSpan -Minutes 5
+      $timer = [System.Diagnostics.Stopwatch]::StartNew()
+      do {
+        $job = Get-AzAutomationJob -RunbookName 'main' -ResourceGroupName $config.runtime.resourceGroup -AutomationAccountName $config.runtime.automationAccountName | 
+          Sort-Object StartTIme -Descending |
+          Select-Object -First 1
       }
-      else {
-          Write-Verbose "No MSI role assignemnts found"
-      }
+      until (($job.Status -in 'Completed','Failed') -or ($timer.Elapsed -ge $timeout))
 
-      # check if lighthouse Custom-RegisterLighthouseResourceProvider exists at a different scope
-      Write-Verbose "Checking for existing role definitions with name 'Custom-RegisterLighthouseResourceProvider'"
-      $uri = "https://management.azure.com/providers/Microsoft.Management/managementGroups/{0}/providers/Microsoft.Authorization/roleDefinitions?`$filter=roleName eq '{1}'&api-version=2018-01-01-preview" -f $lighthouseTargetManagementGroupID,'Custom-RegisterLighthouseResourceProvider'
-      $response = Invoke-AzRestMethod -Uri $uri -Method Get
-
-      If ($response.StatusCode -eq '200') {
-          If ($roleDefId = ($response.Content | ConvertFrom-Json).Name) {
-          $uri = 'https://management.azure.com/providers/Microsoft.Management/managementGroups/{0}/providers/Microsoft.Authorization/roleDefinitions/{1}?api-version=2018-01-01-preview' -f $lighthouseTargetManagementGroupID,$roleDefId
-
-          Invoke-AzRestMethod -Method DELETE -Uri $uri
-          }
+      If ($job.Status -eq 'Failed') {
+        throw "main runbook failed to execute"
       }
 
+      $jobOutput = Get-AzAutomationJobOutput -Id $job.JobId -ResourceGroupName $config.runtime.resourceGroup -AutomationAccountName $config.runtime.automationAccountName
 
+      ForEach ($outputRecord in $jobOutput) {
+        If ($outputRecord.Summary -like 'Failed invoke the module execution script for module*') {
+          Write-Output ("##vso[task.setvariable variable=skipCleanup;isOutput=true]$($true)")
+          throw "Module execution error found in deployment"
+        }
+      }
+
+- task: AzurePowerShell@5
+  condition: always()
+  inputs:
+    azureSubscription: 'Matthew Visual Studio (mb_co)'
+    ScriptType: 'InlineScript'
+    FailOnStandardError: true
+    azurePowerShellVersion: 'LatestVersion'
+    pwsh: true
+    Inline: |
+      If (-NOT($env:SKIPCLEANUP)) {
+        ipmo ./src/GuardrailsSolutionAcceleratorSetup
+
+        $c = Get-GSAExportedConfig -KeyVaultName guardrails-5c060f8e -y
+        $config = $c.configString | ConvertFrom-Json
+
+        $c | remove-gsacentralizedReportingCustomerComponents -Force
+        $c | Remove-GSACentralizedDefenderCustomerComponents -Force
+        $c | Remove-GSACoreResources -Force -Wait
+      }
+      Else {
+        Write-Host "Skipping cleanup because `$env:skipCleanup is true"
+      }
   name: 'CleanUpTest'
 
 
