--- a/ado-signing-pipeline.yml
+++ b/ado-signing-pipeline.yml
@@ -238,7 +238,7 @@ steps:
           "SecondBreakGlassAccountUPN": "breakglass2@$(testTenantDomain)",
           "PBMMPolicyID": "4c4a5f27-de81-430b-b4e5-9cbd50595a87",
           "AllowedLocationPolicyId": "e56962a6-4747-49cd-b67b-bf8b01975c4c",
-          "DepartmentNumber": "",
+          "DepartmentNumber": "190",
           "CBSSubscriptionName": "$(CBSSubscriptionName)",
           "SecurityLAWResourceId": "/subscriptions/$(testSubscriptionId)/resourceGroups/rg-core/providers/Microsoft.OperationalInsights/workspaces/mtb-law01",
           "HealthLAWResourceId": "/subscriptions/$(testSubscriptionId)/resourceGroups/rg-core/providers/Microsoft.OperationalInsights/workspaces/mtb-law01",
@@ -292,7 +292,7 @@ steps:
           "SecondBreakGlassAccountUPN": "breakglass2@$(testTenantDomain)",
           "PBMMPolicyID": "4c4a5f27-de81-430b-b4e5-9cbd50595a87",
           "AllowedLocationPolicyId": "e56962a6-4747-49cd-b67b-bf8b01975c4c",
-          "DepartmentNumber": "",
+          "DepartmentNumber": "190",
           "CBSSubscriptionName": "$(CBSSubscriptionName)",
           "SecurityLAWResourceId": "/subscriptions/$(testSubscriptionId)/resourceGroups/rg-core/providers/Microsoft.OperationalInsights/workspaces/mtb-law01",
           "HealthLAWResourceId": "/subscriptions/$(testSubscriptionId)/resourceGroups/rg-core/providers/Microsoft.OperationalInsights/workspaces/mtb-law01",
