--- a/ado-signing-pipeline.yml
+++ b/ado-signing-pipeline.yml
@@ -386,14 +386,19 @@ steps:
     azurePowerShellVersion: 'LatestVersion'
     pwsh: true
     Inline: |
-        ipmo ./src/GuardrailsSolutionAcceleratorSetup
+        If ($env:BUILD_SOURCEVERSIONMESSAGE -notlike '*[skip_clean]*') {
+          ipmo ./src/GuardrailsSolutionAcceleratorSetup
 
-        $c = Get-GSAExportedConfig -KeyVaultName gsapipe-5c060f8e -y
-        $config = $c.configString | ConvertFrom-Json
+          $c = Get-GSAExportedConfig -KeyVaultName gsapipe-5c060f8e -y
+          $config = $c.configString | ConvertFrom-Json
 
-        $c | remove-gsacentralizedReportingCustomerComponents -Force
-        $c | Remove-GSACentralizedDefenderCustomerComponents -Force
-        $c | Remove-GSACoreResources -Force -Wait
+          $c | remove-gsacentralizedReportingCustomerComponents -Force
+          $c | Remove-GSACentralizedDefenderCustomerComponents -Force
+          $c | Remove-GSACoreResources -Force -Wait
+        }
+        Else {
+          Write-Output "Skipping cleanup because BUILD_SOURCEVERSIONMESSAGE contains '[skip_clean]'. `$env:BUILD_SOURCEVERSIONMESSAGE: '$env:BUILD_SOURCEVERSIONMESSAGE'"
+        }
   name: 'CleanUpTest'
 
 
