--- a/ado-signing-pipeline.yml
+++ b/ado-signing-pipeline.yml
@@ -44,10 +44,16 @@ variables:
 steps:
 
 - task: UseDotNet@2
-  displayName: 'Install .NET 2.1.30 for ESRP task'
+  displayName: 'Install .NET 2.1 for ESRP task'
+  inputs:
+    packageType: sdk
+    version: 2.1.x
+
+- task: UseDotNet@2
+  displayName: 'Install .NET 2.1 for ESRP task'
   inputs:
     packageType: runtime
-    version: 2.1.30
+    version: 2.1.x
   
 - task: EsrpCodeSigning@1
   condition: eq(variables.skipSigning, 'false')
