Move to shared Invoke-GraphQuery function (#233)
* Fixed issue #32

* Mitigation for modules 8 and 9 - initial draft

* Added Mititgation and Report Time to modules 8,9 and 11

* Added Report Time to all modules.

* updated main with ReportTIme

* missed a file

* Updated create-manifest script.

* fixed az.accounts module version

* fixed automatic Subnet exclusion issue and added CBS subscription exclusion to module 8

* Fixed PBMM Module, added Report Time and CBS subscriptione exclusion to module 5-9 and 11.

* New zips

* Fixed minor parameter issues with main.ps1

* Fixed issues

* Fixed issues

* Added proper permissions to MI for tenant diagnostics

* merging from main

* Adding Mititgation Commands/Instructions

* Adding Mitigation commands

* Fixed module eleven

* Fixing zip issue

* Fixed documentationa and added check on parameter format

* Set up CI with Azure Pipelines

[skip ci]

* Added comment regarding permissions to documention.

* Completed Module approach changes

* minor fixes.

* added module parameters and updated doc.

* update

* setup update

* added tags.json

* Documentation updates

* Added tags documentation

* Fixed module 10

* Added zip for fixed module 10

* Complete re-writing of modules 5,6 and 7

* Removed unnecessary read me files for modules 6 and 7

* minor fixes in main and update.ps1

* minor fixes in 5,6,7

* Change datetime format.

* fixed typo in bicep file

* Added ItemName to Module 10

* Updated workbook

* Added new CodeOwner

* Updated query time to 24 hours.

* minor fix to module 10

* trying to merge...

* Fixing AzAccounts issue

* Fixed query for workbook

* fixing workbook

* Updated PBMMM and DiTransit zips

* new zips for test

* Updated localization zip

* Added module 3

* Fixed zips for 5,6 and 7

* fixed workbook not being updated.

* first try

* first checkin after changing modules to send 

--- a/ado-signing-pipeline.yml
+++ b/ado-signing-pipeline.yml
@@ -11,6 +11,7 @@ pr:
 pool:
   vmImage: windows-latest
 
+
 parameters:
 - name: skipCleanup
   displayName: 'Skip cleanup of test deployment'
@@ -41,8 +42,8 @@ variables:
     value: ${{ parameters.preClean }}
 
 steps:
-
-- task: EsrpCodeSigning@1
+  
+- task: EsrpCodeSigning@2
   condition: eq(variables.skipSigning, 'false')
   inputs:
     ConnectedServiceName: 'ESRP Guardrails Accelerator Signing'
@@ -386,14 +387,19 @@ steps:
     azurePowerShellVersion: 'LatestVersion'
     pwsh: true
     Inline: |
-        ipmo ./src/GuardrailsSolutionAcceleratorSetup
+        If ($env:BUILD_SOURCEVERSIONMESSAGE.ToString() -notlike '*[skip_clean]*') {
+          ipmo ./src/GuardrailsSolutionAcceleratorSetup
 
-        $c = Get-GSAExportedConfig -KeyVaultName gsapipe-5c060f8e -y
-        $config = $c.configString | ConvertFrom-Json
+          $c = Get-GSAExportedConfig -KeyVaultName gsapipe-5c060f8e -y
+          $config = $c.configString | ConvertFrom-Json
 
-        $c | remove-gsacentralizedReportingCustomerComponents -Force
-        $c | Remove-GSACentralizedDefenderCustomerComponents -Force
-        $c | Remove-GSACoreResources -Force -Wait
+          $c | remove-gsacentralizedReportingCustomerComponents -Force
+          $c | Remove-GSACentralizedDefenderCustomerComponents -Force
+          $c | Remove-GSACoreResources -Force -Wait
+        }
+        Else {
+          Write-Output "Skipping cleanup because BUILD_SOURCEVERSIONMESSAGE contains '[skip_clean]'. `$env:BUILD_SOURCEVERSIONMESSAGE: '$env:BUILD_SOURCEVERSIONMESSAGE'"
+        }
   name: 'CleanUpTest'
 
 
